pruebas con random classiffier, mejores resultados

--- a/pruebas-imagenes.ipynb
+++ b/pruebas-imagenes.ipynb
@@ -4680,7 +4680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images,labels,paths=readImages('./images/0/*','./images/1/*')"
+    "images,labels,paths=readImages('./images/1/*','./images/0/*')"
    ]
   },
   {
@@ -4700,7 +4700,7 @@
     {
      "data": {
       "text/plain": [
-       "(30000, 3)"
+       "(2000, 3)"
       ]
      },
      "execution_count": 4,
@@ -4747,32 +4747,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>[[[241, 240, 243], [241, 240, 243], [241, 240,...</td>\n",
-       "      <td>images/0/10269_idx5_x1101_y901_class0.png</td>\n",
+       "      <td>[[[222, 212, 239], [230, 224, 245], [235, 231,...</td>\n",
+       "      <td>images/1/12867_idx5_x1851_y1351_class1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>[[[200, 182, 232], [210, 193, 235], [220, 211,...</td>\n",
-       "      <td>images/0/9254_idx5_x1551_y1851_class0.png</td>\n",
+       "      <td>[[[194, 170, 222], [188, 167, 219], [192, 171,...</td>\n",
+       "      <td>images/1/16167_idx5_x2201_y1701_class1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>[[[206, 181, 227], [235, 230, 233], [238, 235,...</td>\n",
-       "      <td>images/0/9259_idx5_x2401_y951_class0.png</td>\n",
+       "      <td>[[[160, 117, 172], [159, 127, 207], [158, 116,...</td>\n",
+       "      <td>images/1/12821_idx5_x1651_y1551_class1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
-       "      <td>[[[226, 210, 241], [235, 232, 241], [238, 232,...</td>\n",
-       "      <td>images/0/12930_idx5_x951_y1201_class0.png</td>\n",
+       "      <td>[[[220, 204, 226], [229, 223, 241], [223, 205,...</td>\n",
+       "      <td>images/1/13691_idx5_x3651_y1901_class1.png</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>[[[242, 241, 241], [236, 236, 243], [150, 108,...</td>\n",
-       "      <td>images/0/9227_idx5_x901_y1251_class0.png</td>\n",
+       "      <td>[[[169, 123, 176], [132, 86, 134], [136, 83, 1...</td>\n",
+       "      <td>images/1/14154_idx5_x1801_y1501_class1.png</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4780,18 +4780,18 @@
       ],
       "text/plain": [
        "   label                                              image  \\\n",
-       "0      1  [[[241, 240, 243], [241, 240, 243], [241, 240,...   \n",
-       "1      1  [[[200, 182, 232], [210, 193, 235], [220, 211,...   \n",
-       "2      1  [[[206, 181, 227], [235, 230, 233], [238, 235,...   \n",
-       "3      1  [[[226, 210, 241], [235, 232, 241], [238, 232,...   \n",
-       "4      1  [[[242, 241, 241], [236, 236, 243], [150, 108,...   \n",
+       "0      1  [[[222, 212, 239], [230, 224, 245], [235, 231,...   \n",
+       "1      1  [[[194, 170, 222], [188, 167, 219], [192, 171,...   \n",
+       "2      1  [[[160, 117, 172], [159, 127, 207], [158, 116,...   \n",
+       "3      1  [[[220, 204, 226], [229, 223, 241], [223, 205,...   \n",
+       "4      1  [[[169, 123, 176], [132, 86, 134], [136, 83, 1...   \n",
        "\n",
-       "                                        path  \n",
-       "0  images/0/10269_idx5_x1101_y901_class0.png  \n",
-       "1  images/0/9254_idx5_x1551_y1851_class0.png  \n",
-       "2   images/0/9259_idx5_x2401_y951_class0.png  \n",
-       "3  images/0/12930_idx5_x951_y1201_class0.png  \n",
-       "4   images/0/9227_idx5_x901_y1251_class0.png  "
+       "                                         path  \n",
+       "0  images/1/12867_idx5_x1851_y1351_class1.png  \n",
+       "1  images/1/16167_idx5_x2201_y1701_class1.png  \n",
+       "2  images/1/12821_idx5_x1651_y1551_class1.png  \n",
+       "3  images/1/13691_idx5_x3651_y1901_class1.png  \n",
+       "4  images/1/14154_idx5_x1801_y1501_class1.png  "
       ]
      },
      "execution_count": 5,
@@ -4800,12 +4800,34 @@
     }
    ],
    "source": [
-    "#df.head()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    1000\n",
+       "0    1000\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4814,11 +4836,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exportDF(df,'df_30mil')"
+    "exportDF(df,'breast_cancer_2000m')"
    ]
   },
   {
