guardando modelo rfc

--- a/pruebas-imagenes.ipynb
+++ b/pruebas-imagenes.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import pickle\n",
     "\n",
-    "from src.dataframe import readImages,createDf,importDfPickle,resizeImages,exportDF,reziseDF"
+    "from src.dataframe import readImages,createDf,importDfPickle,resizeImages,exportDF,reziseDF,fftransform"
    ]
   },
   {
@@ -4681,6 +4681,15 @@
    "outputs": [],
    "source": [
     "images,labels,paths=readImages('./images/1/*','./images/0/*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tff=fftransform(images)"
    ]
   },
   {
