--- a/pruebas-imagenes.ipynb
+++ b/pruebas-imagenes.ipynb
@@ -4689,7 +4689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tff=fftransform(images)"
+    "#tff=fftransform(images)"
    ]
   },
   {
@@ -4709,7 +4709,7 @@
     {
      "data": {
       "text/plain": [
-       "(2000, 3)"
+       "(30000, 3)"
       ]
      },
      "execution_count": 4,
@@ -4820,8 +4820,8 @@
     {
      "data": {
       "text/plain": [
-       "1    1000\n",
-       "0    1000\n",
+       "1    15000\n",
+       "0    15000\n",
        "Name: label, dtype: int64"
       ]
      },
@@ -4849,7 +4849,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exportDF(df,'breast_cancer_2000m')"
+    "exportDF(df,'df_30mil')"
    ]
   },
   {
