--- a/modelo_rn.ipynb
+++ b/modelo_rn.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "from tensorflow import keras\n",
+    "\"\"\"from tensorflow import keras\n",
     "import pandas as pd\n",
     "\n",
     "from src.dataframe import importDfPickle\n",
@@ -37,30 +37,75 @@
     "from tensorflow.python.keras.optimizers import Adadelta, Adam\n",
     "from keras.utils import to_categorical\n",
     "\n",
-    "classifier = Sequential()"
+    "classifier = Sequential()\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#from tensorflow.keras import backend as K\n",
+    "from tensorflow.keras import backend \n",
+    "from tensorflow.keras.datasets import mnist\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, Flatten\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.layers.core import Activation, Flatten, Dropout, Dense\n",
+    "from keras.layers.normalization import BatchNormalization\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from tensorflow.keras.models import model_from_json\n",
+    "from sklearn import preprocessing\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import glob\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import PIL\n",
+    "from PIL import Image\n",
+    "import pickle\n",
+    "import json\n",
+    "import time\n",
+    "from os import listdir\n",
+    "from src.dataframe import importDfPickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=importDfPickle(\"./output/df_35mil_unbal.pkl\")"
+    "df=importDfPickle(\"./output/df_30mil.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(35000, 3)"
+       "(30000, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(35000, 50, 50, 3)"
+       "(30000, 50, 50, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,8 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_shape=(50,50,3)\n",
-    "num_classes = 2"
+    "\"\"\"input_shape=(50,50,3)\n",
+    "num_classes = 2\"\"\""
    ]
   },
   {
@@ -249,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## This is the neural network proposed architecture\n",
+    "\"\"\"## This is the neural network proposed architecture\n",
     "model = Sequential()\n",
     "model.add(Conv2D(32, kernel_size=(3, 3),\n",
     "                 activation='relu',\n",
@@ -264,7 +309,88 @@
     "model.add(Dense(num_classes, activation='softmax'))\n",
     "model.compile(loss=keras.losses.sparse_categorical_crossentropy, \n",
     "              optimizer='adadelta',\n",
-    "              metrics=['accuracy'])"
+    "              metrics=['accuracy'])\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24000, 50, 50, 3) (6000, 50, 50, 3) (24000,) (6000,)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow' has no attribute 'get_default_graph'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-008b4758c6c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mchanDim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConv2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"same\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mActivation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"relu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBatchNormalization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mchanDim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpool_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.5/site-packages/keras/layers/core.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, activation, **kwargs)\u001b[0m\n\u001b[1;32m    287\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 289\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mActivation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    290\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msupports_masking\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    291\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mactivations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mactivation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.5/site-packages/keras/engine/topology.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    282\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    283\u001b[0m             \u001b[0mprefix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 284\u001b[0;31m             \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_to_snake_case\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprefix\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_uid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprefix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    285\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    286\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.5/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36mget_uid\u001b[0;34m(prefix)\u001b[0m\n\u001b[1;32m     61\u001b[0m     \"\"\"\n\u001b[1;32m     62\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0m_GRAPH_UID_DICTS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 63\u001b[0;31m     \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_default_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     64\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mgraph\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_GRAPH_UID_DICTS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0m_GRAPH_UID_DICTS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdefaultdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow' has no attribute 'get_default_graph'"
+     ]
+    }
+   ],
+   "source": [
+    "num_classes = 2\n",
+    "img_rows, img_cols, img_colors = 50, 50, 3\n",
+    "input_shape = (img_rows, img_cols, img_colors)\n",
+    "print(X_train.shape,X_test.shape,y_train.shape,y_test.shape)\n",
+    "\n",
+    "batch_size = 20\n",
+    "epochs = 100\n",
+    "\n",
+    "aug = ImageDataGenerator(\n",
+    "    rotation_range=25, width_shift_range=0.1,\n",
+    "    height_shift_range=0.1, shear_range=0.2, \n",
+    "    zoom_range=0.2,horizontal_flip=True, \n",
+    "    fill_mode=\"nearest\")\n",
+    "\n",
+    "model = Sequential()\n",
+    "chanDim = -1\n",
+    "if backend.image_data_format() == \"channels_first\":\n",
+    "    chanDim = 1\n",
+    "model.add(Conv2D(32, (3, 3), padding=\"same\",input_shape=input_shape))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(MaxPooling2D(pool_size=(3, 3)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Conv2D(64, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(Conv2D(64, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Conv2D(128, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(Conv2D(128, (3, 3), padding=\"same\"))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization(axis=chanDim))\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(1024))\n",
+    "model.add(Activation(\"relu\"))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(num_classes))\n",
+    "model.add(Activation(\"softmax\"))\n",
+    "model.compile(loss=keras.losses.sparse_categorical_crossentropy, optimizer=keras.optimizers.Adadelta(), metrics=[\"accuracy\"])\n",
+    "\n",
+    "filepath='Checkpoint_{epoch:02d}_{val_acc:.2f}'\n",
+    "checkpoint = ModelCheckpoint(filepath, monitor='val_acc', verbose=1, save_best_only=True, mode='max')\n",
+    "callbacks_list = [checkpoint]\n"
    ]
   },
   {
@@ -319,7 +445,7 @@
     }
    ],
    "source": [
-    "# Fit the NN\n",
+    "\"\"\"# Fit the NN\n",
     "batch_size = 220\n",
     "epochs = 14\n",
     "\n",
@@ -327,7 +453,7 @@
     "          batch_size=batch_size,\n",
     "          epochs=epochs,\n",
     "          verbose=1,\n",
-    "          validation_data=(X_test, y_test))"
+    "          validation_data=(X_test, y_test))\"\"\""
    ]
   },
   {
